--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <div class="container mt-4">
-    <h1>Edit Note</h1>
+    <h1>Edit Note (ID: <span th:text="${note.id}"></span>)</h1>
     <form th:action="@{/note/edit}" th:object="${note}" method="post">
+        <input type="hidden" th:field="*{id}"/>
         <div class="form-group">
             <label for="title">Title:</label>
             <input type="text" class="form-control" id="title" th:field="*{title}">
