--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -7,14 +7,15 @@
 </head>
 <body>
 <div class="container mt-4">
-    <h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+    <h3 th:inline="text">Welcome [[${remoteUser}]][[${username}]]</h3>
     <form th:action="@{/logout}" method="post">
         <input type="submit" value="Logout" />
     </form>
 
-    <h1>Edit Note (ID: <span th:text="${note.id}"></span>)</h1>
-    <form th:action="@{/note/edit}" th:object="${note}" method="post">
-        <input type="hidden" th:field="*{id}"/>
+    <h1>Edit Note (ID: <span th:text="${note.noteId}"></span>)</h1>
+    <form th:action="@{'/note/edit/' + ${userId} + '/' + ${note.noteId}}" th:object="${note}" method="post">
+        <input type="hidden" th:value="${userId}"/>
+        <input type="hidden" th:field="*{noteId}"/>
         <div class="form-group">
             <label for="title">Title:</label>
             <input type="text" class="form-control" id="title" th:field="*{title}">
