--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 <div class="container mt-4">
-    <h3 th:inline="text">Welcome [[${remoteUser}]][[${username}]]</h3>
+    <h3>Welcome <span th:text="${remoteUser}"></span> [<span th:text="${username}"></span>]</h3>
     <form th:action="@{/logout}" method="post">
-        <input type="submit" value="Logout" />
+        <input type="submit" value="Logout" class="btn btn-secondary"/>
     </form>
 
     <h1>Edit Note (ID: <span th:text="${note.noteId}"></span>)</h1>
-    <form th:action="@{'/note/edit/' + ${userId} + '/' + ${note.noteId}}" th:object="${note}" method="post">
-        <input type="hidden" th:value="${userId}"/>
+    <form th:action="@{'/note/user/' + ${username} + '/edit/' + ${note.noteId}}" th:object="${note}" method="post">
         <input type="hidden" th:field="*{noteId}"/>
+        <input type="hidden" name="username" value="${username}">
         <div class="form-group">
             <label for="title">Title:</label>
             <input type="text" class="form-control" id="title" th:field="*{title}">
